Give the sub-JVM more memory for loaded classes.
git-svn-id: https://jumble.svn.sourceforge.net/svnroot/jumble/trunk@363 3c96dea9-a453-4bd5-b869-110af7cb2dd7